# showbin

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
inc/: arm-gcc-toolchain.cmake  clang-macos-toolchain.cmake  gcc-macos-toolchain.cmake  numbertypeparser.h  showbin.hpp
notes/: base_notes.org
src/: CMakeLists.txt  numbertypeparser.cpp  showbin.cpp  src.cpp
test/: CMakeLists.txt  cm.txt  test.cpp  test_main.cpp
